--- a/podfile
+++ b/podfile
@@ -24,5 +24,5 @@ target 'FindElectricity' do
    pod 'AMap3DMap-NO-IDFA'
    pod 'AMapLocation-NO-IDFA'
    pod 'AMapNavi-NO-IDFA'
-  
+   pod 'BlocksKit'
 end
