--- a/FindElectricity/Info.plist
+++ b/FindElectricity/Info.plist
@@ -31,6 +31,10 @@
 	<string>地图需要您的定位服务，否则可能无法使用。</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>地图要使用的定位</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
