--- a/podfile
+++ b/podfile
@@ -18,7 +18,7 @@ target 'FindElectricity' do
   end
    pod 'AFNetworking'
    pod 'Masonry'
-   pod 'SDWebImage'
+   pod 'SDWebImage','5.2.0'
    pod 'MJExtension'
    pod 'MJRefresh'
    pod 'AMap3DMap-NO-IDFA'
