--- a/podfile
+++ b/podfile
@@ -30,6 +30,7 @@ target 'FindElectricity' do
    # Mantle 增强 https://github.com/hilen/MantleExtension
    pod 'Mantle'
    pod 'MTLManagedObjectAdapter', '~> 1.0.3'
+   pod "MagicalRecord"
    
    pod "Qiniu", "~> 7.1"
    pod 'BlocksKit'
