--- a/FindElectricity/Info.plist
+++ b/FindElectricity/Info.plist
@@ -65,7 +65,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wx10131f267a34f481</string>
+				<string>wxa72c8451fe7ad48f</string>
 			</array>
 		</dict>
 		<dict>
