--- a/podfile
+++ b/podfile
@@ -1,6 +1,7 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
 
+source 'https://github.com/CocoaPods/Specs.git'
 target 'FindElectricity' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
@@ -27,6 +28,7 @@ target 'FindElectricity' do
    pod 'SVProgressHUD'
    pod 'IQKeyboardManager'
    pod 'Bugly'
+   pod 'FBRetainCycleDetector'
    
    # Mantle 增强 https://github.com/hilen/MantleExtension
 #   pod 'Mantle'
