--- a/FindElectricity/Info.plist
+++ b/FindElectricity/Info.plist
@@ -20,7 +20,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -49,7 +49,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>wechat</string>
@@ -113,6 +113,8 @@
 	<string>地图要使用的定位</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>App需要保存照片到相册是否允许？</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>pp上传照片需要使用相册是否允许？</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>location</string>
