--- a/FindElectricity/Info.plist
+++ b/FindElectricity/Info.plist
@@ -104,7 +104,7 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>此App会在拍照时访问相机权限</string>
+	<string>此App上传个人头像拍照时访问相机权限，是否允许？</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>地图要使用的定位</string>
 	<key>NSLocationAlwaysUsageDescription</key>
@@ -114,7 +114,7 @@
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>App需要保存照片到相册是否允许？</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>pp上传照片需要使用相册是否允许？</string>
+	<string>App上传照片需要使用相册是否允许？</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>location</string>
